--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ behat.yml
 /public/css
 /public/js
 /public/uploads/users/*
+/public/uploads/attachments/*
+/public/uploads/branch/*
 /public/media/cache
 /public/media/js
 /public/build.js
